bebytes/tests/compile_time/bit_fields/bits_on_non_numeric.stderr
error: Unsupported type for bits attribute. Only integer types (u8, i8, u16, i16, u32, i32, u64, i64, u128, i128) and char are supported. Note: f32, f64, and bool cannot be used with bit fields
  --> tests/compile_time/bit_fields/bits_on_non_numeric.rs:13:14
   |
13 |     invalid: String,
   |              ^^^^^^
